# local-dashbaord

./: .gitignore  CLEANUP_REPORT.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_REPORT.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  start_services.ps1  tailwind.config.js  vite.config.ts
docs/: PRD  mvp-verification-report.rmd
migrations/: 001_init.sql
python/: parse_file.py  requirements.txt  start_uie_service.py
sql/: init.sql
src/: App.tsx  config.ts  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Sidebar.tsx  UpdateBar.tsx
src/deduplication/: DeduplicationPage.tsx  FileFingerprintPage.tsx  TestPage.tsx  VersionComparePage.tsx  deduplication.ts  hash.ts  hashWorker.ts  mockData.ts  realData.ts  reportGenerator.ts  similarity.ts  versionManager.ts
src/engine/: riskEngine.ts
src/extraction/: DataExtractionPage.tsx  documentParser.ts  entityExtractor.ts  fieldMapper.ts  fileParser.ts
src/hooks/: usePolling.ts
src/mock/: mockData.ts  realData.ts
src/pages/: Dashboard.tsx  DataExtractionPage.tsx  DeduplicationPage.tsx  FileFingerprintPage.tsx  RiskReport.tsx  TestPage.tsx  VersionComparePage.tsx
src/risk/: Dashboard.tsx  DataNetwork.tsx  RiskReport.tsx  UpdateBar.tsx  config.ts  dataStore.ts  docxReport.ts  riskEngine.ts  usePolling.ts
src/services/: database.ts  entityExtractor.ts  fileParser.ts
src/shared/: Sidebar.tsx  database.ts  environment.ts  etl.ts  export.ts  fclonesWrapper.ts  types.ts
src/store/: dataStore.ts
(+12 files in other folders)
